# dev

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20241123173712_01_create_user.sql  20241125153505_seed_user.sql  20241129141526_create_key_table.sql
server/: .gitignore  Cargo.toml  dockerfile
server/src/: main.rs
server/src/db/: connection.rs  mod.rs
server/src/models/: api_key.rs  llm_model.rs  mod.rs  user.rs
server/src/routes/: auth.rs  mod.rs  set_api_key.rs
src/: main.rs
src/routes/: auth.rs  mod.rs
